pcrs/resources/less/new-visualizer.less
@border-color: #DDDDDD;
@address-width: 35%;
@values-width: 65%;
@cell-width: 16.25%;
@cell-height: 37px;
@heading-height: 38px;

hr {
    width: 100%;
    margin-top: 0px;
}

.title {
    font-size: 20px;
    font-weight: bold;
    text-align: center;
    margin-bottom: 5px;
}

.visualizer-section {
    margin: 5px;
    padding: 10px;
    vertical-align: top;
    display: inline-block;
    overflow-y: auto;
    max-height: 800px;
}

.viz-left-wrapper {
    .visualizer-section;
    width: 50%;
    min-width: 30em;
}

.code-window-section {
    .viz-left-wrapper;
    margin: 0px;
    width: 100%;
    min-width: 25em;
}

#preview-code {
    max-height: 500px;
    overflow: auto;
}

.std-out-section {
    .viz-left-wrapper;
    margin: 0px;
    width: 100%;
    min-width: 25em;
}

#std-out-textbox {
    overflow:auto;
    border: 1px solid black;
    margin: 25px;
    width: 93%;
    min-width: inherit;
    height: 8em;
    padding-left: 1em;
    padding-right: 1em;
}

.std_err {
    color: red;
}

.name-type-section {
    .visualizer-section;
    min-width: 10em;
    width: 23%;
}

.memory-map-section {
    .visualizer-section;
    min-width: 25em;
    width: 23%;
}

.memory-map-section td.memory-map-cell,td.memory-map-address,td.address-width,th {
    height: @cell-height;
}

.visualizer-section-heading {
    padding-left: 5px;
    padding-right: 5px;
    text-align: center;
}

.memory-map-table-wrapper {
    width: 100%;
    position: relative !important;
    display: inline-block;
}

.memory-map-table {
    width: 100%;
    min-width: 100%;
    float: left;
    table-layout: fixed;
}

.memory-map-cell-table {
    .memory-map-table;
    border: none !important;
    position: absolute !important;
    z-index: 0;
}

.memory-map-label-table {
    .memory-map-table;
    position: relative !important;
    z-index: 1000;
}

.heading-height {
    height: @heading-height;
}

.address-width {
    padding-right: 0px;
    width: @address-width;
}

.values-width {
    padding-left: 0px;
    width: @values-width;
}

.address-heading {
    text-align: right;
    padding-right: 0px;
    width: @address-width;
}

.values-heading {
    padding-left: 0px;
    border-left: 2px solid @border-color !important;
    text-align: center;
    width: @values-width;
}

.memory-map-address {
    text-align: right;
    vertical-align: middle !important;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    border-right: 2px solid @border-color !important;
    width: @address-width;
}

.memory-map-cell {
    text-align: center;
    vertical-align: middle !important;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    border: thin solid @border-color;
}

//.crouching-table
.hidden-cell {
    display: none;
    //opacity: 0;
    //border-color: transparent;
    position: relative;
    //z-index: 1000000;
}

.clear-cell {
    border-left: none !important;
    border-right: none !important;
}

.right-edge-clear-cell {
    border-left: none !important;
}

.top-row-clear-cell {
    border-bottom: 1px solid white !important;
}

.middle-row-clear-cell {
    border-top: none !important;
    border-bottom: none !important;
}

.bottom-row-clear-cell {
    border-top: none !important;
}

.dot-line {
    text-align: center;
    padding: 2px !important;
    line-height: 15px !important;
    height: 15px;
}

.highlight {
    background-color: rgba(210,250,205, 0.5);
}

